--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "apexcharts": "^5.3.4",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "hook-form": "^0.0.1",
     "react": "^19.1.1",
     "react-apexcharts": "^1.7.0",
