--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@lottiefiles/dotlottie-react": "^0.17.0",
     "apexcharts": "^5.3.4",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
